[package]
name = "st"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["clabby"]
repository = "https://github.com/clabby/st"
homepage = "https://github.com/clabby/st"
publish = false

[dependencies]
# Core
tokio = { version = "1.39", features = ["full"] }
anyhow = "1.0"
itertools = "0.13"
git2 = "0.19"
once_cell = "1.20"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
inquire = "0.7"
nu-ansi-term = "0.50"

# Serde
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "st"
path = "src/main.rs"
